--- a/index.html
+++ b/index.html
@@ -33,244 +33,7 @@
     <main>
 
         <ul class="poke-list">
-            <!-- <li class="grass-poke-card">
-
-                <div class="info">
-                    <span class="poke-name-num">Bulbasaur</span>
-                    <span class="poke-name-num">N° 0001</span>
-                </div>
-
-                <img src="./src/images/pokemons/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
-
-                <ul class="types">
-                    <li class="grass-type">
-                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
-                        Grass
-                    </li>
-                    <li class="poison-type">
-                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
-                        Poison
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows 
-                    larger.
-                </p>
-
-            </li> -->
-            <li class="grass-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Ivysaur</span>
-                    <span class="poke-name-num">N° 0002</span>
-                </div>
-
-                <img src="./src/images/pokemons/ivysaur.gif" alt="ivysaur" class="poke-gif">
-
-                <ul class="types">
-                    <li class="grass-type">
-                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
-                        Grass
-                    </li>
-                    <li class="poison-type">
-                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
-                        Poison
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
-                </p>
-
-            </li>
-            <li class="grass-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Venusaur</span>
-                    <span class="poke-name-num">N° 0003</span>
-                </div>
-
-                <img src="./src/images/pokemons/venusaur.gif" alt="venusaur" class="poke-gif">
-
-                <ul class="types">
-                    <li class="grass-type">
-                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
-                        Grass
-                    </li>
-                    <li class="poison-type">
-                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
-                        Poison
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
-                </p>
-
-            </li>
-            <li class="fire-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Charmander</span>
-                    <span class="poke-name-num">N° 0004</span>
-                </div>
-
-                <img src="./src/images/pokemons/charmander.gif" alt="charmander" class="poke-gif">
-
-                <ul class="types">
-                    <li class="fire-type">
-                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
-                        Fire
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    From the time it is born, a flame burns at the tip of its tail. Its life would end if the flame were 
-                    to go out.
-                </p>
-
-            </li>
-            <li class="fire-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Charmeleon</span>
-                    <span class="poke-name-num">N° 0005</span>
-                </div>
-
-                <img src="./src/images/pokemons/charmeleon.gif" alt="charmeleon" class="poke-gif">
-
-                <ul class="types">
-                    <li class="fire-type">
-                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
-                        Fire
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    If it becomes agitated during battle, it spouts intense flames, incinerating its surroundings.
-                </p>
-
-            </li>
-            <li class="fire-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Charizard</span>
-                    <span class="poke-name-num">N° 0006</span>
-                </div>
-
-                <img src="./src/images/pokemons/charizard.gif" alt="charizard" class="poke-gif">
-
-                <ul class="types">
-                    <li class="fire-type">
-                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
-                        Fire
-                    </li>
-                    <li class="flying-type">
-                        <img class="types-icons" src="src/images/icons/types/flying.svg" alt="flying type">
-                        Flying
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    Its wings can carry this Pokémon close to an altitude of 4,600 feet. It blows out fire at very high 
-                    temperatures.
-                </p>
-
-            </li>
-            <li class="water-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Squirtle</span>
-                    <span class="poke-name-num">N° 0007</span>
-                </div>
-
-                <img src="./src/images/pokemons/squirtle.gif" alt="squirtle" class="poke-gif">
-
-                <ul class="types">
-                    <li class="water-type">
-                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
-                        Water
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    When it feels threatened, it draws its limbs inside its shell and sprays water from its mouth.
-                </p>
-
-            </li>
-            <li class="water-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Wartortle</span>
-                    <span class="poke-name-num">N° 0008</span>
-                </div>
-
-                <img src="./src/images/pokemons/wartortle.gif" alt="wartortle" class="poke-gif">
-
-                <ul class="types">
-                    <li class="water-type">
-                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
-                        Water
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    It cleverly controls its furry ears and tail to maintain its balance while swimming.
-                </p>
-
-            </li>
-            <li class="water-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Blastoise</span>
-                    <span class="poke-name-num">N° 0009</span>
-                </div>
-
-                <img src="./src/images/pokemons/blastoise.gif" alt="blastoise" class="poke-gif">
-
-                <ul class="types">
-                    <li class="water-type">
-                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
-                        Water
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its shell.
-                </p>
-
-            </li>
-            <li class="bug-poke-card">
-
-                <div class="info">
-                    <!-- span =  -->
-                    <span class="poke-name-num">Caterpie</span>
-                    <span class="poke-name-num">N° 0010</span>
-                </div>
-
-                <img src="./src/images/pokemons/caterpie.gif" alt="caterpie" class="poke-gif">
-
-                <ul class="types">
-                    <li class="bug-type">
-                        <img class="types-icons" src="src/images/icons/types/bug.svg" alt="bug type">
-                        Bug
-                    </li>
-                </ul>
-
-                <p class="desc">
-                    Its short feet are tipped with suction pads that enable it to tirelessly climb slopes and walls.
-                </p>
-
-            </li>
+          <!-- cards são criados pelo javascript -->
         </ul>
 
     </main>
